# BagsCreatorFund-BCF-

./: .env.example  .gitignore  Anchor.toml  BagsCreatorFund_Sistema_Completo.html  DEPLOY.md  README.md  index.html  info.txt  package-lock.json  package.json  tsconfig.json  vite.config.js
anchor/: Anchor.toml  Cargo.toml
anchor/programs/bags-creator-fund/: Cargo.toml
anchor/programs/bags-creator-fund/src/: lib.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
programs/bcf-core/: Cargo.toml
programs/bcf-core/src/: lib.rs
scripts/: deploy-mainnet.sh  deploy.sh  watcher.mjs
src/: App.jsx  bcf_core.json  index.css  main.jsx  polyfills.js
src/components/: CampaignCard.jsx  Layout.jsx  ResultsSidebar.jsx  Toast.jsx
src/components/raffle/: RaffleCard.jsx
src/lib/: bags.js  constants.js  idl.json  programClient.js  solana.js  store.js
src/pages/: CampaignPage.jsx  CreateCampaignPage.jsx  CreateTokenPage.jsx  DashboardPage.jsx  ExplorePage.jsx  HomePage.jsx
src/utils/: campaignSorting.js
tests/: bcf-core.ts
