[workspace]
members = ["programs/bags-creator-fund"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
# BPF compat: Rust 1.75 cannot compile edition2024 crates
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.5.1" }
toml_edit = { git = "https://github.com/toml-rs/toml", tag = "v0.22.21" }
block-buffer = { git = "https://github.com/RustCrypto/utils", tag = "block-buffer-v0.10.4" }
digest = { git = "https://github.com/RustCrypto/traits", tag = "digest-v0.10.7" }
proc-macro-crate = { git = "https://github.com/bkchr/proc-macro-crate", tag = "v1.3.1" }
borsh = { git = "https://github.com/near/borsh-rs", tag = "borsh-v1.2.1" }
unicode-segmentation = { git = "https://github.com/unicode-rs/unicode-segmentation", tag = "v1.11.0" }
indexmap = { git = "https://github.com/indexmap-rs/indexmap", tag = "2.2.6" }
