[package]
name = "bcf-core"
version = "0.1.0"
description = "Bags Creator Fund - Production Ready Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bcf_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "=1.18.17"
switchboard-on-demand = { version = "0.11.3", features = ["anchor"] }
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"
