[package]
name = "bags-creator-fund"
version = "0.1.0"
description = "BagsCreatorFund — On-chain creator funding rounds on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bags_creator_fund"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
