[package]
name = "bags-creator-fund"
version = "0.1.0"
description = "BagsCreatorFund — On-chain creator funding rounds on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bags_creator_fund"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# BPF compat: Rust 1.75 cannot compile edition2024 crates
block-buffer = "=0.10.4"
digest = "=0.10.7"
anchor-lang = "0.29.0"
# ROOT CAUSE FIX:
# solana-program 1.18.26 requires blake3 = "^1.5.0".
# blake3 >=1.6 pulls in digest 0.11 (edition2024, requires Rust >=1.85).
# The Solana BPF toolchain uses Rust 1.75 and cannot compile edition2024 crates.
# blake3 1.5.1 satisfies the ^1.5.0 constraint AND has no digest dependency at all,
# breaking the edition2024 chain entirely.
blake3 = "=1.5.1"
bytemuck = { version = "1.14.0", features = ["derive"] }
