[package]
name = "bags-creator-fund"
version = "0.2.0"
description = "BagsCreatorFund — Multi-token on-chain creator funding rounds on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bags_creator_fund"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# BPF compat: Rust 1.75 cannot compile edition2024 crates
block-buffer = "=0.10.4"
digest      = "=0.10.7"
blake3      = "=1.5.1"
bytemuck    = { version = "1.14.0", features = ["derive"] }
# init_if_needed feature enables the init_if_needed account constraint
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
